[metadata]
name = supernotelib
version = attr: supernotelib.__version__
description = An unofficial converter library for Ratta Supernote
license = Apache License 2.0
author = jya
author_email = jya@wizmy.net
url = https://github.com/jya-dev/supernote-tool

[options]
zip_safe = False
packages = find:
install_requires =
    colour>=0.1.5
    fusepy>=3.0.1
    numpy>=1.19.0
    Pillow>=7.2.0
    potracer>=0.0.1
    pypng>=0.0.20
    reportlab>=3.6.1
    svglib>=1.1.0
    svgwrite>=1.4

[options.entry_points]
console_scripts =
    supernote-tool = supernotelib.cmds.supernote_tool:main
    supernote-fuse = supernotelib.cmds.supernote_fuse:main
